<resources>
    <string name="app_name">Sacrament Agenda</string>
    <string name="main_name">Sacrament Meeting Agenda</string>
    <string name="acknowledgement_item">Add Acknowledgement Item</string>
    <string name="agenda_item">Add Agenda Item</string>
    <string name="announcement_item">Add Announcement Item</string>
    <string name="stakebusiness_item">Add Stake Business</string>
    <string name="wardbusiness_item">Add Ward Business Item</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Sync Data</string>
    <string name="action_url_address">Set Web Service</string>
    <string name="test_url_address">Test Web Service</string>
    <string name="headerTitle">Agenda</string>

    <string name="rbAgenda">Agenda</string>
    <string name="rbAnnouncements">Announcements</string>
    <string name="rbAcknowledgements">Acknowledgements</string>
    <string name="rbWardBusiness">Ward Business</string>
    <string name="rbStakeBusiness">Stake Business</string>
    <string name="goButton">Submit</string>
    <string name="saveButton">Save</string>
    <string name="viewButton">View Agenda</string>
    <string name="date">Date</string>
    <string name="openingHymn">Opening Hymn</string>
    <string name="openingPrayer">Invocation</string>
    <string name="sacramentHymn">Sacrament Hymn</string>
    <string name="firstSpeaker">First Speaker</string>
    <string name="secondSpeaker">Second Speaker</string>
    <string name="intermediateHymn">Intermediate Hymn</string>
    <string name="finalSpeaker">Final Speaker</string>
    <string name="closingHymn">Closing Hymn</string>
    <string name="closingPrayer">Benediction</string>

    <string name="announcementPresiding">Presiding</string>
    <string name="announcementConducting">Conducting</string>

    <string name="acknowledgementPresiding">Presiding</string>
    <string name="acknowledgementConducting">Conducting</string>
    <string name="acknowledgementStakeVisitor">Stake visitor</string>
    <string name="acknowledgementStakeCalling">Stake visitor Calling</string>

    <string name="announcements">Announcements</string>

    <string name="stakeBusiness">Stake Business</string>

    <string name="wardBusinessPurpose">Ward Business Purpose</string>
    <string name="wardBusinessName">Name</string>
    <string name="wardBusinessCalling">Calling</string>
    <string name="title_activity_agenda">Sacrament Meeting</string>
    <string name="agendaButton">Agenda Items</string>
    <string name="announcementButton">Announcements</string>
    <string name="acknowledgementsButton">Acknowledgements</string>
    <string name="stakebusinessButton">Stake Business</string>
    <string name="wardbusinessButton">Ward Business</string>
    <string name="viewAgendaButton">View Agenda</string>
    <string name="urlAddress">Webservice URL</string>
    <string name="add_webservice_name">Web Service</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>
