<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date"
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignBaseline="@+id/etDate"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/etDate"
            android:descendantFocusability="blocksDescendants"
            android:focusableInTouchMode="false"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/date"
            android:layout_toEndOf="@+id/date" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stakeBusiness"
            android:id="@+id/stakeBusiness"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etDate" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etStakeBusiness"
            android:layout_below="@+id/stakeBusiness"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveButton"
            android:id="@+id/saveStakeBusinessButton"
            android:layout_below="@+id/etStakeBusiness"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>
</LinearLayout>